Melhorias no endpoint de listagem de arduinos e criacao da documentacao do mesmo no Swagger
